--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t ashish/react-docker-demo -f Dockerfile.dev
+  - docker build -t ashish/react-docker-demo -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true ashish/react-docker-demo npm run test 
