Add AWS CD support

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true ashish/react-docker-demo npm run test 
+
+deploy:
+  provider: elasticbeanstalk
+  access_key_id: "$AWS_ACCESS_KEY_ID"
+  secret_access_key: "$AWS_SECRET_ACCESS_KEY"
+  bucket: "elasticbeanstalk-ap-south-1-590183707585"
+  bucket_path: "frontend"
+  app: "frontend"
+  env: "Frontend-env"
+  region: "ap-south-1"
+  on:
+    branch: master
