--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ sudo : required
 services:
   - docker
 
-# before_install:
-#   - docker build -t ashish/react-docker-demo -f Dockerfile.dev .
+before_install:
+  - docker build -t ashish/react-docker-demo -f Dockerfile.dev .
 
-# script:
-#   - docker run -e CI=true ashish/react-docker-demo npm run test 
+script:
+  - docker run -e CI=true ashish/react-docker-demo npm run test 
 
 deploy:
   provider: elasticbeanstalk
